Fixed img href for logo

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <nav id="navbar" class="nav">
         <div class="nav-container">
             <div class="brand">
-                <a aria-current="page" class="" href="/">
-                    <img src="/dist/images/favicon.png" class="favicon" alt="Floppy Diskette">
+                <a aria-current="page" class="" href="https://fredsiika.github.io/fredcodes/">
+                    <img src="dist/images/floppy.png" class="favicon" alt="Floppy Disk Logo">
                     <span class="text">Fred Siika</span>
                 </a>
             </div>
