Fixed newsletter avatar photo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="lead">
               <div class="elevator">
                   <h1>Hey, I'm Fred!</h1>
-                  <p>I'm a full stack software developer creating <a href="https://github.com/fredsiika" target="_blank" rel="noopener noreferrer">open source</a> projects and <a href="/blog">writing</a> about modern JavaScript, Node.js, and development.</p>
+                  <p>I'm a full stack software developer creating <a href="https://github.com/fredsiika" target="_blank" rel="noopener noreferrer">open source</a> projects and writing about modern JavaScript, Node.js, and development.</p>
                   <div class="social-buttons">
                       <span>
                           <span>
@@ -55,7 +55,7 @@
           </div>
           <!-- Newsletter Section -->
           <div class="newsletter-section">
-              <img src="" class="newsletter-avatar" alt="Fred">
+              <img src="/dist/images/avatar_fredsiika.png" class="newsletter-avatar" alt="Fred">
               <div>
                   <h3>Email Newsletter</h3>
                   <p>I write tutorials. Get an update when something new comes out by signing up below!</p>
